<resources>
    <string name="app_name">Place It</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="restaurant">Restaurant</string>
    <string name="photo_restaurant">Photo Restaurant</string>
    <string name="title_restaurant">Title Restaurant</string>
    <string name="rating_restaurant">%s・ </string>
    <string name="description_restaurant">%s・ </string>
    <string name="distance_restaurant">%s m</string>
    <string name="status_restaurant">Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_restaurant">083824+++</string>
    <string name="address_restaurant">Address</string>
    <string name="petunjuk_arah">Petunjuk Arah</string>
    <string name="detail_restaurant">Detail Restaurant</string>
</resources>