<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.detailrestaurant.DetailRestaurantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_detail_image"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            tools:listitem="@layout/item_list_image" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_restaurant"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:drawablePadding="2dp"
                    android:text="@string/rating_restaurant"
                    app:drawableLeftCompat="@drawable/ic_star_rate_16dp" />

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_toEndOf="@+id/tv_rating"
                    android:layout_toRightOf="@+id/tv_rating"
                    android:gravity="center_vertical"
                    android:text="@string/description_restaurant" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title"
                    android:layout_toEndOf="@+id/tv_description"
                    android:layout_toRightOf="@+id/tv_description"
                    android:gravity="center_vertical"
                    android:text="@string/distance_restaurant" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_description"
                    android:text="@string/status_restaurant" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_status"
                    android:drawablePadding="2dp"
                    android:text="@string/phone_restaurant"
                    app:drawableLeftCompat="@drawable/ic_phone_16dp" />

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_phone"
                    android:padding="2dp"
                    android:text="@string/address_restaurant"
                    app:drawableLeftCompat="@drawable/ic_location_on_16dp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/petunjuk_arah" />
    </LinearLayout>
</ScrollView>