<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/photo_restaurant"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_error" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_photo"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_restaurant"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/rate_restaurant"
                app:drawableLeftCompat="@drawable/ic_star_rate_16dp"
                app:drawableStartCompat="@drawable/ic_star_rate_16dp" />

            <TextView
                android:id="@+id/txt_strip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_toEndOf="@id/tv_rating"
                android:layout_toRightOf="@id/tv_rating"
                android:gravity="center_vertical"
                android:text="@string/strip" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_toEndOf="@+id/txt_strip"
                android:layout_toRightOf="@+id/txt_strip"
                android:gravity="center_vertical"
                android:text="@string/description_restaurant" />

            <TextView
                android:id="@+id/txt_strip_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title"
                android:layout_toEndOf="@id/tv_description"
                android:layout_toRightOf="@id/tv_description"
                android:gravity="center_vertical"
                android:text="@string/strip" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_toEndOf="@+id/txt_strip_1"
                android:layout_toRightOf="@+id/txt_strip_1"
                android:gravity="center_vertical"
                android:text="@string/distance_restaurant" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_rating"
                android:text="@string/status_restaurant" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>